# swagger/v1/swagger.yaml
@@ -2,6 +2,16 @@ openapi: 3.0.1
 info:
   title: API V1
   version: v1
+components:
+  securitySchemes:
+    bearer_auth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
+security:
+  - bearer_auth: []
+
 tags:
   - name: Users
     description: Операції з користувачами
@@ -25,7 +35,8 @@ paths:
     post:
       tags:
         - Users
-      summary: Створити користувача
+      summary: Створити користувача (реєстрація)
+      security: []
       requestBody:
         required: true
         content:
@@ -37,11 +48,13 @@ paths:
                   type: string
                 password:
                   type: string
+                password_confirmation:
+                  type: string
                 rating:
                   type: integer
       responses:
-        '200':
-          description: Успішно
+        '201':
+          description: Користувача створено
   "/users/{id}":
     parameters:
       - name: id
@@ -70,7 +83,7 @@ paths:
               properties:
                 email:
                   type: string
-                password:
+                password_digest:
                   type: string
                 rating:
                   type: integer
@@ -90,7 +103,7 @@ paths:
               properties:
                 email:
                   type: string
-                password:
+                password_digest:
                   type: string
                 rating:
                   type: integer
